turn BBGraph.create() to non-static