@@ -8,8 +8,8 @@
 	<artifactId>byransha</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<properties>
-		<maven.compiler.target>21</maven.compiler.target>
-		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>23</maven.compiler.target>
+		<maven.compiler.source>23</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -37,10 +37,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
-					<release>21</release>
-					<commandlineArgs>-Dfile.encoding=UTF-8</commandlineArgs>
+					<source>23</source>
+					<target>23</target>
+					<release>23</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -58,6 +57,15 @@
                     </systemProperties>
                 </configuration>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 </project>
